Trying to fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,7 @@ div.section {
     margin-right: 3%;
     font-weight: 100;
     padding: 3%;
+    overflow: visible;
 }
 div.container {
     margin-top: 3%;
